add python code snippet

--- a/report.ipynb
+++ b/report.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "As our algorithm relied on computing the difference between the actual orientation of the Thymio and the wanted orientation, such large changes strongly impacted its ability to drive smoothly. We were able to solve this by keeping track of the previously measured orientation and wanted direction and based the new motion control commands on the differences of the previous and new measurements. \n",
     "\n",
-    "A similar approach was taken in the orientation estimation of our [Kalman Filter](#kalman-filter) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps.\n",
+    "A similar approach was taken in the orientation estimation of our [Kalman Filter](#handling-orientation-jumps) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps.\n",
     "\n"
    ]
   },
@@ -475,13 +475,8 @@
     "\n",
     "<a id=\"wheel-speed-measurements\"></a>\n",
     "##### Wheel Speed Measurements\n",
-    "The wheel speed measurements are used for both estimating the position and orientation of the Thymio. A refinement was introduced by incorporating a max-min constraint, to mitigate the impact of noise on the speed sensors. This addition serves to limit the potential noise-induced variations in the sensor readings, contributing to a more stable and reliable interpretation of the Thymio robot's speed information. To predict the new orientation, the angular velocity is calculated based on the difference of wheel speeds and a baseline minimum period for a 360° turn of the Thymio. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The wheel speed measurements are used for both estimating the position and orientation of the Thymio. A refinement was introduced by incorporating a max-min constraint, to mitigate the impact of noise on the speed sensors. This addition serves to limit the potential noise-induced variations in the sensor readings, contributing to a more stable and reliable interpretation of the Thymio robot's speed information. To predict the new orientation, the angular velocity is calculated based on the difference of wheel speeds and a baseline minimum period for a 360° turn of the Thymio. \n",
+    "\n",
     "```python\n",
     "# WHEEL_MIN_SPEED <= v <= WHEEL_MAX_SPEED\n",
     "v = (left_wheel_speed + right_wheel_speed) / 2.0\n",
@@ -495,13 +490,8 @@
     "    w = 0\n",
     "    if period != 0:\n",
     "        w = - 2 * np.pi / period\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "##### Camera input\n",
     "As the camera input already is provided in grid coordinates by the computer vision, there is no additional processing needed for it.\n",
     "\n",
@@ -509,9 +499,27 @@
     "##### Prediction and Update Step\n",
     "We use the wheel speed measurements to perform the prediction step of the Kalman filter and use the computer vision information in the update method. With the combination of these two informations, the Kalman filter provides an accurate estimation of the position and orientation of the Thymio robot.\n",
     "\n",
+    "\n",
     "<a id=\"handling-orientation-jumps\"></a>\n",
     " ##### Handling Orientation Jumps\n",
-    "As the provided orientation input from our computer vision module is a float between 0 and 2π, depending on the Thymio's orientation, there may be jumps in the estimated orientation from 0 to 2π and vice versa. This leads to large jumps in the overall estimation of the orientation. To combat that, we do not limit the predicted orientation to [0, 2π] but let it be any number and scale using the mod operation only when the navigation part accesses it. This dramatically improved the orientation estimation of our filter.\n",
+    "As the provided orientation input from our computer vision module is a float between 0 and 2π, depending on the Thymio's orientation, there may be jumps in the estimated orientation from 0 to 2π and vice versa. This leads to large jumps in the overall estimation of the orientation. To combat that, we do not limit the predicted orientation to \\[0, 2π) but let it be any number and scale using the mod operation only when the navigation part accesses it. This dramatically improved the orientation estimation of our filter.\n",
+    "\n",
+    "```Python\n",
+    "\n",
+    "# always add the change in angle from last time to this time to the \"total\" angle\n",
+    "angle_change = direction_angle_camera - self.last_temp_direction_angle_camera\n",
+    "\n",
+    "# since only small angle changes expected, we can assume that the change is between -ANGLE_JUMP_TOLERANCE and ANGLE_JUMP_TOLERANCE\n",
+    "# --> if not, we need to wrap around (as there is a jump from 360 to 0 degrees or vice versa)\n",
+    "if angle_change > ANGLE_JUMP_TOLERANCE:\n",
+    "    angle_change = angle_change - 2 * np.pi\n",
+    "elif angle_change < -ANGLE_JUMP_TOLERANCE:\n",
+    "    angle_change = angle_change + 2 * np.pi\n",
+    "\n",
+    "self.total_direction_angle_camera = self.total_direction_angle_camera + angle_change\n",
+    "self.last_temp_direction_angle_camera = direction_angle_camera\n",
+    "        \n",
+    "```\n",
     "\n",
     "<a id=\"adaptability-vision\"></a>\n",
     "##### Adaptability to Vision Feed Cut-Off\n",
