Implemented the PI_regulation and the rotation code in the motion control explanation in Jupyter. Clean some magic number in MotionControl.py and useless or redundant function.

--- a/report.ipynb
+++ b/report.ipynb
@@ -299,6 +299,7 @@
     "\n",
     "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. Once the calculation done, the Thymio receives the sorthest path to align itslef with the desired angle and will rotate on its axis to start the correction. When the Thymio has reached the correct angle, the camera signals it and the Thymio will execute the MOVE command towards the next point.\n",
     "\n",
+    "\n",
     "<a id=\"move\"></a> \n",
     "##### MOVE\n",
     "<div align=\"center\">\n",
@@ -321,15 +322,223 @@
     "    <em>Schematic of the Movement</em>\n",
     "</div>\n",
     "\n",
+    "All the parameters and the explanations from the previous part : ROTATE, MOVE and movement schematic, can be seen int the the below code :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "```python\n",
+    "from tdmclient import ClientAsync, aw\n",
+    "\n",
+    "# Constant in motion control\n",
+    "STOP_MOVING = 0\n",
+    "STOP = 0\n",
+    "MOVE = 1\n",
+    "ROTATE = 2\n",
+    "TRANSITION_ANGLE = 10\n",
+    "CHANGE_STATE = 30\n",
+    "ANGLE_JUMP_TOLERANCE = 280\n",
+    "\n",
+    "# Create a class for every instance of the motors\n",
+    "class Motion:\n",
+    "    \"\"\"\n",
+    "    This class is used to control the motion of the Thymio\n",
+    "    \"\"\"\n",
+    "    def __init__(self, node):\n",
+    "\n",
+    "        self.node = node\n",
+    "        \n",
+    "        self.distance     = 0\n",
+    "        self.angle        = 0\n",
+    "        self.normal_speed = 100\n",
+    "        \n",
+    "        self.threshold_angle = 2 # Avoiding oscillation on the desired angle\n",
+    "        self.desired_angle   = 0\n",
+    "        # Need to calibrate this for the lecture of the angle\n",
+    "        self.calibration     = 5\n",
+    "\n",
+    "        # Regulator parameter\n",
+    "        self.Kp            = 3         # Finding the parameters of our Pi controller by tuning them during test\n",
+    "        self.Ki            = 0.2\n",
+    "        self.sum_error     = 0\n",
+    "        self.max_sum_error = 30\n",
+    "        self.error         = 0\n",
+    "        self.change_idx    = -1\n",
+    "        \n",
+    "        # Parameters of the Thymio angle and the desired one\n",
+    "        self._total_actual_angle = None\n",
+    "        self._last_actual_angle = None\n",
+    "        self._total_wanted_angle = None\n",
+    "        self._last_wanted_angle = None\n",
+    "\n",
+    "    def motors(self, speed_left, speed_right):\n",
+    "        \"\"\"\"\n",
+    "        Send the information to provide to the Thymio for changing the speed of the wheels\n",
+    "        Return : \"motor.left.target\": [int(speed_left)], \"motor.right.target\": [int(speed_right)]\n",
+    "        \"\"\"\n",
+    "        return {\n",
+    "            \"motor.left.target\": [int(speed_left)], \"motor.right.target\": [int(speed_right)],\n",
+    "        }\n",
+    "\n",
+    "    def move(self, left_speed, right_speed):\n",
+    "        \"\"\"\"\n",
+    "        Send the new velocity of the motors to the Thymio\n",
+    "        \"\"\"\n",
+    "        aw(self.node.send_set_variables(self.motors(int(left_speed), int(right_speed))))\n",
+    "\n",
+    "    def pi_regulation(self, actual_angle, wanted_angle, movement, change_idx):\n",
+    "        \"\"\"\"\n",
+    "        The control of the robot is done in this function. We have 3 states that the Thymio can be\n",
+    "        1) STOP: the Thymio has reached a point so we stop for a instance the motors\n",
+    "        2) MOVE: the Thymio is moving to the next point with a PI controller that adjust the velocity\n",
+    "                 of both wheels to adjust the trajectory of the robot\n",
+    "        3) ROTATE: Before moving to the next point, the Thymio rotate on itself to face the next point\n",
+    "                   it needs to go\n",
+    "        Return : left_speed, right_speed\n",
+    "        \"\"\"\n",
+    "        self.desired_angle = wanted_angle\n",
+    "\n",
+    "        # Movement at Stop means that the robot has achieved the next point and stop moving\n",
+    "        if movement == STOP:\n",
+    "            left_speed = STOP_MOVING\n",
+    "            right_speed = STOP_MOVING\n",
+    "            return left_speed, right_speed\n",
+    "\n",
+    "        # Initialise the movement of the Thymio\n",
+    "        movement = MOVE\n",
+    "\n",
+    "        # total angle stuff ---------\n",
+    "        if self._total_actual_angle is None:\n",
+    "            self._total_actual_angle = actual_angle\n",
+    "            self._last_actual_angle = actual_angle\n",
+    "\n",
+    "            self._total_wanted_angle = wanted_angle\n",
+    "            self._last_wanted_angle = wanted_angle\n",
+    "\n",
+    "        else:\n",
+    "            if abs(actual_angle - self._last_actual_angle) > ANGLE_JUMP_TOLERANCE:\n",
+    "                if actual_angle > self._last_actual_angle:\n",
+    "                    actual_angle -= 360\n",
+    "                else:\n",
+    "                    actual_angle += 360\n",
+    "\n",
+    "            if abs(wanted_angle - self._last_wanted_angle) > ANGLE_JUMP_TOLERANCE:\n",
+    "                if wanted_angle > self._last_wanted_angle:\n",
+    "                    wanted_angle -= 360\n",
+    "                else:\n",
+    "                    wanted_angle += 360\n",
+    "\n",
+    "            difference_actual_angle = actual_angle - self._last_actual_angle\n",
+    "            difference_wanted_angle = wanted_angle - self._last_wanted_angle\n",
+    "\n",
+    "            self._total_actual_angle += difference_actual_angle\n",
+    "            self._total_wanted_angle += difference_wanted_angle\n",
+    "\n",
+    "            while abs(self._total_actual_angle - self._total_wanted_angle) > 360:\n",
+    "                if self._total_actual_angle > self._total_wanted_angle:\n",
+    "                    self._total_actual_angle -= 360\n",
+    "                else:\n",
+    "                    self._total_actual_angle += 360\n",
+    "\n",
+    "            self._last_actual_angle = actual_angle\n",
+    "            self._last_wanted_angle = wanted_angle\n",
+    "\n",
+    "        if (change_idx != self.change_idx and abs(self._total_actual_angle - self._total_wanted_angle) > TRANSITION_ANGLE):  # < 6 degrees\n",
+    "            movement = ROTATE\n",
+    "        elif change_idx != self.change_idx:\n",
+    "            self.change_idx = change_idx\n",
+    "        elif abs(self._total_wanted_angle - self._total_wanted_angle) > CHANGE_STATE:\n",
+    "            self.change_idx = -1\n",
+    "            movement = ROTATE\n",
+    "\n",
+    "        # movement at Move means that the robot is achieving the next point\n",
+    "        if movement == MOVE:\n",
+    "            left_speed = STOP_MOVING\n",
+    "            right_speed = STOP_MOVING\n",
+    "\n",
+    "            # Control if the Thymio is inside the threshold cone of acceptance. If it's not the case\n",
+    "            # the pi controller is active to correct the trajectory\n",
+    "            if ((self._total_wanted_angle - self.threshold_angle) <= self._total_actual_angle\n",
+    "                    and self._total_actual_angle <= (self._total_wanted_angle + self.threshold_angle)):\n",
+    "                left_speed = self.normal_speed\n",
+    "                right_speed = self.normal_speed\n",
+    "\n",
+    "                self.error = 0\n",
+    "                self.sum_error = 0\n",
+    "            \n",
+    "            elif self._total_actual_angle < (self._total_wanted_angle - self.threshold_angle):\n",
+    "                self.error = abs(self._total_actual_angle - self._total_wanted_angle)\n",
+    "                if self.error > 330:\n",
+    "                    self.error = 360 - self.error\n",
+    "\n",
+    "                self.sum_error += self.error\n",
+    "\n",
+    "                # To avoid that the Thymio start to drift with high speed in a wheel, we implemented an anti wind-up\n",
+    "                # to protect from the integrator of our controller\n",
+    "                if self.sum_error < self.max_sum_error:\n",
+    "                    left_speed = self.normal_speed - (self.Kp * self.error + self.Ki * self.sum_error)\n",
+    "                    right_speed = self.normal_speed + (self.Kp * self.error + self.Ki * self.sum_error)\n",
+    "\n",
+    "                else:\n",
+    "                    left_speed = self.normal_speed - (self.Kp * self.error + self.Ki * self.max_sum_error)\n",
+    "                    right_speed = self.normal_speed + (self.Kp * self.error + self.Ki * self.max_sum_error)\n",
+    "\n",
+    "            elif self._total_actual_angle > (self._total_wanted_angle + self.threshold_angle):\n",
+    "                self.error = abs(self._total_actual_angle - self._total_wanted_angle)\n",
+    "                self.sum_error += self.error\n",
+    "\n",
+    "                # To avoid that the Thymio start to drift with high speed in a wheel, we implemented an anti wind-up\n",
+    "                # to protect from the integrator of our controller\n",
+    "                if self.sum_error < self.max_sum_error:\n",
+    "                    left_speed = self.normal_speed + (self.Kp * self.error + self.Ki * self.sum_error)\n",
+    "                    right_speed = self.normal_speed - (self.Kp * self.error + self.Ki * self.sum_error)\n",
+    "\n",
+    "                else:\n",
+    "                    left_speed = self.normal_speed + (self.Kp * self.error + self.Ki * self.max_sum_error)\n",
+    "                    right_speed = self.normal_speed - (self.Kp * self.error + self.Ki * self.max_sum_error)\n",
+    "\n",
+    "            return left_speed, right_speed\n",
+    "            \n",
+    "        # Movement at Rotate means that the robot need to rotate to face the next point\n",
+    "        elif movement == ROTATE:\n",
+    "\n",
+    "            if (self._total_wanted_angle - self._total_actual_angle) >= 0:\n",
+    "                if self._total_wanted_angle - self._total_actual_angle >= 180:\n",
+    "                    left_speed = self.normal_speed\n",
+    "                    right_speed = -self.normal_speed\n",
+    "                else:\n",
+    "                    left_speed = -self.normal_speed\n",
+    "                    right_speed = self.normal_speed\n",
+    "            elif (self._total_wanted_angle - self._total_actual_angle) < 0:\n",
+    "                if (self._total_actual_angle - self._total_wanted_angle) > 180:\n",
+    "                    left_speed = -self.normal_speed\n",
+    "                    right_speed = self.normal_speed\n",
+    "                else:\n",
+    "                    left_speed = self.normal_speed\n",
+    "                    right_speed = -self.normal_speed\n",
+    "                    \n",
+    "            return left_speed, right_speed\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "<a id=\"orientation-angle-challenges\"></a> \n",
     "##### Orientation Angle Challenges\n",
     "One problem we encountered was with the orientation computations for Thymio's the path planning. As the angles were given in the range \\[0, 360), driving straight down on the map, which is a 0° orientation in our coordinate system was problematic. Whenever there were slight orientation changes while driving, the orientation angle of Thymio would jump from 0° to 360° and vice versa. \n",
     "\n",
     "As our algorithm relied on computing the difference between the actual orientation of the Thymio and the wanted orientation, such large changes strongly impacted its ability to drive smoothly. We were able to solve this by keeping track of the previously measured orientation and wanted direction and based the new motion control commands on the differences of the previous and new measurements. \n",
     "\n",
-    "A similar approach was taken in the orientation estimation of our [Kalman Filter](#handling-orientation-jumps) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps.\n",
-    "\n"
-   ]
+    "A similar approach was taken in the orientation estimation of our [Kalman Filter](#handling-orientation-jumps) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -633,31 +842,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-12-03T18:48:25.726354200Z",
-     "start_time": "2023-12-03T18:47:52.968791200Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "ename": "ConnectionRefusedError",
-     "evalue": "[WinError 10061] No connection could be made because the target machine actively refused it",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mConnectionRefusedError\u001b[0m                    Traceback (most recent call last)",
-      "File \u001b[1;32m~\\EPFL\\Mobile Robotics\\Projet\\MobRob_Project-1\\global_nav\\GlobalNavigation.py:423\u001b[0m\n\u001b[0;32m    419\u001b[0m         aw(node\u001b[39m.\u001b[39mset_variables(motion_control\u001b[39m.\u001b[39mmotors(left_speed, right_speed)))\n\u001b[0;32m    422\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 423\u001b[0m     client \u001b[39m=\u001b[39m ClientAsync()\n\u001b[0;32m    424\u001b[0m     node \u001b[39m=\u001b[39m aw(client\u001b[39m.\u001b[39mwait_for_node())\n\u001b[0;32m    426\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\PST\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tdmclient\\clientasync.py:42\u001b[0m, in \u001b[0;36mClientAsync.__init__\u001b[1;34m(self, node_class, **kwargs)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, node_class\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m---> 42\u001b[0m     \u001b[39msuper\u001b[39;49m(ClientAsync, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m     43\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnode_class \u001b[39m=\u001b[39m node_class \u001b[39mor\u001b[39;00m tdmclient\u001b[39m.\u001b[39mClientAsyncCacheNode\n",
-      "File \u001b[1;32mc:\\Users\\PST\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tdmclient\\client.py:98\u001b[0m, in \u001b[0;36mClient.__init__\u001b[1;34m(self, zeroconf, zeroconf_all, tdm_ws, tdm_addr, tdm_port, tdm_transport, password, **kwargs)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdebug \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm_transport \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     97\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mTDM \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm_addr\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm_port\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 98\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconnect()\n\u001b[0;32m     99\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msend_handshake(password)\n",
-      "File \u001b[1;32mc:\\Users\\PST\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tdmclient\\client.py:112\u001b[0m, in \u001b[0;36mClient.connect\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    110\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm \u001b[39m=\u001b[39m TDMConnectionWS(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm_addr, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm_ws_port)\n\u001b[0;32m    111\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 112\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtdm \u001b[39m=\u001b[39m TDMConnection(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtdm_addr, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtdm_port)\n",
-      "File \u001b[1;32mc:\\Users\\PST\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tdmclient\\tcp.py:104\u001b[0m, in \u001b[0;36mTDMConnection.__init__\u001b[1;34m(self, host, port, debug)\u001b[0m\n\u001b[0;32m    101\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, b):\n\u001b[0;32m    102\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msocket\u001b[39m.\u001b[39msendall(b)\n\u001b[1;32m--> 104\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mio \u001b[39m=\u001b[39m TCPClientIO(host, port)\n\u001b[0;32m    105\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdebug \u001b[39m=\u001b[39m debug\n\u001b[0;32m    106\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimeout \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\PST\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tdmclient\\tcp.py:96\u001b[0m, in \u001b[0;36mTDMConnection.__init__.<locals>.TCPClientIO.__init__\u001b[1;34m(self, host, port)\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, host, port):\n\u001b[0;32m     95\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msocket \u001b[39m=\u001b[39m socket\u001b[39m.\u001b[39msocket(socket\u001b[39m.\u001b[39mAF_INET, socket\u001b[39m.\u001b[39mSOCK_STREAM)\n\u001b[1;32m---> 96\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msocket\u001b[39m.\u001b[39;49mconnect((host, port))\n",
-      "\u001b[1;31mConnectionRefusedError\u001b[0m: [WinError 10061] No connection could be made because the target machine actively refused it"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ./Main.py"
    ]
@@ -674,6 +863,15 @@
     "- Kalman Filter: https://filterpy.readthedocs.io/en/latest/kalman/KalmanFilter.html\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
