--- a/report.ipynb
+++ b/report.ipynb
@@ -322,7 +322,7 @@
     "    <em>Schematic of the Movement</em>\n",
     "</div>\n",
     "\n",
-    "All the parameters and the explanations from the previous part : ROTATE, MOVE and movement schematic, can be seen int the the below code :"
+    "All the parameters and explanations from the previous part : ROTATE, MOVE and movement schematic, can be seen in the the below code :"
    ]
   },
   {
