--- a/report.ipynb
+++ b/report.ipynb
@@ -283,10 +283,10 @@
     " \n",
     "The motion control handles 3 states of the robot's movement:\n",
     "* **STOP**: Halts the robot to move during the process or when it reaches the goal.\n",
-    "* **ROTATE**: Prior moving to the next point, the Thymio aligns is direction to face it. Once done, the robot transits in MOVE mode.\n",
-    "* **MOVE**: When the Thymio has the confirmation that it is aligned, it will begin moving towards the next point. This process is regulated by a PI controller to adjust the Thymio's trajectory.\n",
+    "* **ROTATE**: Before moving to the next point, the Thymio aligns its direction to face towards it. Once done, the robot transits to the  MOVE state.\n",
+    "* **MOVE**: Once the Thymio is aligned, it will begin moving towards the next point. This process is regulated by a PI controller to adjust the Thymio's trajectory.\n",
     "     \n",
-    "Now we will describe the main movement of our robot, the ROTATE and the MOVE and describe how they operate.\n",
+    "Now we will describe the main movement of our robot, the ROTATE and MOVE states, and describe how they operate.\n",
     "  \n",
     "<a id=\"rotate\"></a>   \n",
     "##### ROTATE\n",
@@ -297,7 +297,7 @@
     "</div>\n",
     "\n",
     "\n",
-    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. Once the calculation done, the Thymio receives the sorthest path to align itslef with the desired angle and will rotate on its axis to start the correction. When the Thymio has reached the correct angle, the camera signals it and the Thymio will execute the MOVE command towards the next point.\n",
+    "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. The Thymio receives the shortest turning direction to align itself with the desired angle, and rotates on its axis to start the correction. When the Thymio has reached the correct angle, (either as signaled by the camera, or estimated by Kalman filtering), the Thymio will execute the MOVE command towards the next point.\n",
     "\n",
     "\n",
     "<a id=\"move\"></a> \n",
@@ -308,11 +308,11 @@
     "</div>\n",
     "\n",
     "\n",
-    "After aligning with the desired angle, the PI controller handles the movement towards the next point. During it, the regulation works to maintain the Thymio's direction in the threshold angle. When the Thymio is in the threshold zone, *the green cone*, both wheels rotate at the same velocity. When the Thymio is out of the cone, the PI controller corrects the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation works until the error is inside the threshold zone, avoiding oscillation around the desired angle.\n",
+    "The PI controller handles the Thymio's alignement during its movement towards the next point: it works to maintain the Thymio's direction inside of the threshold angle. When the Thymio is in the threshold zone, *the green cone*, both wheels rotate at the same velocity, it moves straight ahead. When the Thymio's orientation exits the tolerated cone, the PI controller corrects the direction by increasing the speed of one wheel and decreasing the speed of the other. The regulation works until the error is inside the threshold zone, in order to avoid oscillation around the desired angle.\n",
     "     \n",
-    "Like explained before, the PI controller is performing during all the robot's movement, except when it enters in obstacle avoidance who is managed by the *Local Navigation*. The tuning of our regulator, *Kp* and *Ki*, was tuned in an experimental way. We observed how the robot was correcting its error, with small gains, and progressively increased the values of our gains to achieve a smooth and dynamic correction. Finally, we obtanied acceptable results with a *Kp = 3* and a *Ki = 0.2*.\n",
+    "As explained before, the PI controller is active during the robot's movement, except when it enters obstacle avoidance, managed by *Local Navigation*. The tuning of our regulator parameters, *Kp* and *Ki*, was tuned experimentally, by observed how the robot corrected its error with small gains, and progressively increased the values of our gains to achieve a smooth and dynamic correction. Finally, we obtanied satisfactory results with a *Kp = 3* and a *Ki = 0.2*.\n",
     "\n",
-    "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement. The maximum value was determined by an experimental way, similar to the regulator parameters.\n",
+    "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement, from integrator error saturation. The maximum value was determined experimentally, similar to the regulator parameters, to mix good dynamics and avoid overshoot from integral windup.\n",
     "\n",
     "<a id=\"movement-schematic\"></a> \n",
     "##### Schematic of the Movement\n",
@@ -322,11 +322,14 @@
     "    <em>Schematic of the Movement</em>\n",
     "</div>\n",
     "\n",
-    "All the parameters and explanations from the previous part : ROTATE, MOVE and movement schematic, can be seen in the the below code :"
+    "Everything explained and summarized here can be seen in the code below, taken from `MotionControl.py`:"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "```python\n",
     "from tdmclient import ClientAsync, aw\n",
@@ -520,13 +523,13 @@
     "                    \n",
     "            return left_speed, right_speed\n",
     "```"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "<a id=\"orientation-angle-challenges\"></a> \n",
     "##### Orientation Angle Challenges\n",
@@ -535,10 +538,7 @@
     "As our algorithm relied on computing the difference between the actual orientation of the Thymio and the wanted orientation, such large changes strongly impacted its ability to drive smoothly. We were able to solve this by keeping track of the previously measured orientation and wanted direction and based the new motion control commands on the differences of the previous and new measurements. \n",
     "\n",
     "A similar approach was taken in the orientation estimation of our [Kalman Filter](#handling-orientation-jumps) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,20 +564,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This code is taken from ```LocalNavigation.py```\n",
     "```python\n",
     "def judge_severity(self):\n",
-    "        \"\"\"\n",
-    "        Updates the danger_state of the LocalNavigation object and returns it\n",
-    "        \"\"\"\n",
-    "        self.danger_state = DangerState.SAFE\n",
-    "        #Do no handle the back sensors, since Thymio does not reverse in Global Nav\n",
-    "        for i in range(5):\n",
-    "            if (self.prox_horizontal[i] > SensorThresh.STOP_THRESH.value):\n",
-    "                self.danger_state = DangerState.STOP\n",
-    "                return self.danger_state    #If any sensor is at STOP, we do not overwrite it\n",
-    "            elif (self.prox_horizontal[i] > SensorThresh.WARN_THRESH.value):\n",
-    "                self.danger_state = DangerState.WARN\n",
-    "        return self.danger_state\n",
+    "    \"\"\"\n",
+    "    Updates the danger_state of the LocalNavigation object and returns it\n",
+    "    \"\"\"\n",
+    "    self.danger_state = DangerState.SAFE\n",
+    "    #Do no handle the back sensors, since Thymio does not reverse in Global Nav\n",
+    "    for i in range(5):\n",
+    "        if (self.prox_horizontal[i] > SensorThresh.STOP_THRESH.value):\n",
+    "            self.danger_state = DangerState.STOP\n",
+    "            return self.danger_state    #If any sensor is at STOP, we do not overwrite it\n",
+    "        elif (self.prox_horizontal[i] > SensorThresh.WARN_THRESH.value):\n",
+    "            self.danger_state = DangerState.WARN\n",
+    "    return self.danger_state\n",
+    "```\n",
+    "\n",
+    "And this excerpt from ```LocalNavigation.run()```\n",
+    "```python\n",
+    "#Danger\n",
+    "if self.danger_state == DangerState.STOP and self.state == LocalNavState.START:\n",
+    "    self.state = LocalNavState.ROTATING #Start turning\n",
     "```"
    ]
   },
@@ -599,29 +607,59 @@
    "source": [
     "```python\n",
     "def determine_turn_dir(self, dir_changes, next_dir_change_idx):\n",
-    "        \"\"\"\n",
-    "        Determines turn direction for circling an object, based on the Dijktra path.\n",
-    "        Since the path tends to stick to object, circling outside the next turn will\n",
-    "        avoid the Local obstacle without crossing a global obstacle.\n",
-    "        Updates turn_dir, to be called in turn()\n",
-    "        \"\"\"\n",
-    "        previous_cell = np.array(dir_changes[next_dir_change_idx-1])\n",
-    "        current_cell = np.array(dir_changes[next_dir_change_idx])\n",
-    "        next_cell = np.array(dir_changes[next_dir_change_idx+1])\n",
+    "    \"\"\"\n",
+    "    Determines turn direction for circling an object, based on the Dijktra path.\n",
+    "    Since the path tends to stick to object, circling outside the next turn will\n",
+    "    avoid the Local obstacle without crossing a global obstacle.\n",
+    "    Updates turn_dir, to be called in turn()\n",
+    "    \"\"\"\n",
+    "    previous_cell = np.array(dir_changes[next_dir_change_idx-1])\n",
+    "    current_cell = np.array(dir_changes[next_dir_change_idx])\n",
+    "    next_cell = np.array(dir_changes[next_dir_change_idx+1])\n",
     "\n",
-    "        current_vector = current_cell - previous_cell\n",
-    "        next_vector = next_cell - current_cell\n",
+    "    current_vector = current_cell - previous_cell\n",
+    "    next_vector = next_cell - current_cell\n",
     "\n",
-    "        orientation_current_v = rotation_nextpoint(current_vector)\n",
-    "        orientation_next_v = rotation_nextpoint(next_vector)\n",
+    "    orientation_current_v = rotation_nextpoint(current_vector)\n",
+    "    orientation_next_v = rotation_nextpoint(next_vector)\n",
     "\n",
-    "        orientation_difference = (orientation_next_v - orientation_current_v)%360\n",
-    "        #We have now the turn angle of the next turn in the path, determine which way to turn to circle wide around it\n",
+    "    orientation_difference = (orientation_next_v - orientation_current_v)%360\n",
+    "    #We have now the turn angle of the next turn in the path, determine which way to turn to circle wide around it\n",
     "\n",
-    "        if orientation_difference < 180:\n",
-    "            self.turn_dir = 'r'\n",
-    "        else:\n",
-    "            self.turn_dir = 'l'\n",
+    "    if orientation_difference < 180:\n",
+    "        self.turn_dir = 'r'\n",
+    "    else:\n",
+    "        self.turn_dir = 'l'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These `'r'` and `'l'` variables are placeholders to signify whether the Thymio needs to circle to the right or to the left, as can be seen in the translator function, `LocalNavigation.turn()`, presented here:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def turn(self):\n",
+    "    \"\"\"\n",
+    "    Reads a direction from the turn_dir field\n",
+    "    Call this to turn left with 'l', right with 'r'\n",
+    "    \"\"\"\n",
+    "    if self.dir == 'r':\n",
+    "        motor_right_target = -NORMAL_SPEED\n",
+    "        motor_left_target = NORMAL_SPEED\n",
+    "    elif self.dir == 'l':\n",
+    "        motor_right_target = NORMAL_SPEED\n",
+    "        motor_left_target = -NORMAL_SPEED\n",
+    "    else:   #failsafe, do nothing\n",
+    "        motor_right_target = 0\n",
+    "        motor_left_target = 0\n",
+    "    return motor_left_target, motor_right_target\n",
     "```"
    ]
   },
@@ -633,15 +671,97 @@
     "With the Thymio's orientation now firmly established through the preceding rotation phase, the robot enters the circling phase. In this stage, forward motion is initiated with a subtle offset between the left and right motors, enabling the Thymio to trace a wide circle around the detected obstacle.\n",
     "\n",
     "    If an obstacle is detected during this circling motion, the robot seamlessly transitions back to the turning phase, reverting to the initially chosen turning direction. This strategic continuity allows the Thymio to gracefully navigate around elongated obstacles by tracing circles along their edge.\n",
-    "    The circling phase concludes when the Thymio reconnects with the Global Navigation path, which is bound to happen, as pathfinding is designed to create non-looping paths. Once the Thymio detects its return to the path, it recomputes the remaining checkpoints (turning points), selects the next one in line, and gracefully relinquishes control back to the Global Navigation module.\n",
-    "\n"
+    "\n",
+    "Again, this code is presented form `LocalNavigation.run()`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It therefore acts as a simple Finite State Machine, illustrated in the image below:\n",
+    "```python\n",
+    "if self.state == LocalNavState.CIRCLING:\n",
+    "    self.circle_counter += 1       #Counter for circling, gives some slack to the thymio to avoid staying in place\n",
+    "    \n",
+    "    if self.danger_state != DangerState.SAFE:   #Encounters another obstacle, or circle was too tight\n",
+    "        motor_speeds = self.turn()\n",
+    "        self.rotate_counter = 0  \n",
+    "        self.circle_counter = 0     #Reset counters, we need to start over\n",
+    "        return motor_speeds\n",
+    "    \n",
+    "    #We can circle safely\n",
+    "    forward_speed = NORMAL_SPEED - SPEED_OFFSET      #Fastest wheel turns at normal speed \n",
+    "    if self.turn_dir == 'l':\n",
+    "        left_coeff = 1\n",
+    "        right_coeff = -TURN_COEFF\n",
+    "    else:\n",
+    "        left_coeff = -TURN_COEFF\n",
+    "        right_coeff = 1\n",
+    "    left_speed = forward_speed + left_coeff*SPEED_OFFSET\n",
+    "    right_speed= forward_speed +right_coeff*SPEED_OFFSET\n",
+    "    return left_speed, right_speed\n",
+    "return motor_speeds\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " The circling phase concludes when the Thymio reconnects with the Global Navigation path, which is bound to happen, as pathfinding is designed to create non-looping paths. Once the Thymio detects its return to the path, it recomputes the remaining checkpoints (turning points), selects the next one in line, and gracefully relinquishes control back to the Global Navigation module.\n",
+    "\n",
+    "This code snippet is taken from the `Main.py`'s `while` loop:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "resume_path_cell = dijkstra.map.check_if_returned_to_path()\n",
+    "if (danger_level != DangerState.STOP and\n",
+    "    (local_nav.circle_counter > CIRCLE_COUNTER_BUFFER and resume_path_cell is not None)):  # Back to path, wtih some slack\n",
+    "    # Done with local nav\n",
+    "    local_nav.reset_state()\n",
+    "    dijkstra.handle_local_navigation_exit(thymio_location=resume_path_cell)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function is called from `GlobalNavigation`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def handle_local_navigation_exit(self, thymio_location):\n",
+    "    \"\"\"\n",
+    "    Handles the exit of local navigation and takeover of global navigation\n",
+    "    :param thymio_location: The Thymio's location\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    x_thymio, y_thymio = thymio_location\n",
+    "    self._next_direction_change_idx = 0\n",
+    "    x_dir_change, y_dir_change = self.map.direction_changes[self._next_direction_change_idx]\n",
+    "    for (x_path, y_path) in self.path:\n",
+    "        if x_path == x_dir_change and y_path == y_dir_change:\n",
+    "            self._next_direction_change_idx += 1\n",
+    "            x_dir_change, y_dir_change = self.map.direction_changes[self._next_direction_change_idx]\n",
+    "        if x_path == x_thymio and y_path == y_thymio:\n",
+    "            break\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local Navigation therefore acts as a simple Finite State Machine, illustrated in the image below:\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/local_navigation_fsm.png\">\n",
@@ -867,11 +987,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
