Added Local Nav to results

--- a/report.ipynb
+++ b/report.ipynb
@@ -866,7 +866,7 @@
    "source": [
     "The image processing and vision components proved to be highly robust, consistently delivering accurate results in detecting obstacles, the Thymio robot, and the goal. The implementation of live camera feed utilizing ArUco markers was particularly precise, even enabling successful recovery from simulated kidnapping scenarios.\n",
     "\n",
-    "Concerning navigation, the path derived through the Dijkstra algorithm demonstrated sufficient optimization, allowing the robot to traverse from the starting point to the goal position efficiently. The motion control mechanisms effectively ensured that the Thymio adhered to the designated path.\n",
+    "Concerning navigation, the path derived through the Dijkstra algorithm demonstrated sufficient optimization, allowing the robot to traverse from the starting point to the goal position efficiently. The motion control mechanisms effectively ensured that the Thymio adhered to the designated path. Local Navigation allowed the Thymio to succesfully detect obstacles unknown to the camera and avoid them without losing the path or the goal.\n",
     "\n",
     "\n",
     "The biggest problem that we encountered was ..\n"
