add code snippets for cv

--- a/report.ipynb
+++ b/report.ipynb
@@ -112,9 +112,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./report_images/implementation_structure1.png\" alt=\"Image Alt Text\" width=\"400\" height=\"400\"/>\n",
-    "\n",
-    "*implementation strucure*"
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/implementation_structure1.png\" alt=\"Image Alt Text\" width=\"400\" height=\"400\"/>\n",
+    "    <em>Implementation Strucure</em>"
    ]
   },
   {
@@ -173,7 +173,54 @@
     "\n",
     "<a id=\"marker-detection\"></a>\n",
     "##### Marker Detection\n",
-    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
+    "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. These are searched for in the input $frame$ coming from the video feed as follows:\n",
+    "\n",
+    "```Python\n",
+    "gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "parameters = aruco.DetectorParameters()\n",
+    "parameters.minMarkerPerimeterRate = MARKER_MIN_PERIMETER_RATE\n",
+    "# corners go clockwise from top left\n",
+    "corners, ids, rejected_img_points = aruco.detectMarkers(gray, self.marker_dict, parameters=parameters)\n",
+    "\n",
+    "ids_to_direction = {}\n",
+    "\n",
+    "if ids is not None:\n",
+    "    corners = np.array(corners)\n",
+    "    ids = np.array(ids)\n",
+    "    centroids = []\n",
+    "    for id in range(len(ids)):\n",
+    "        top_left = corners[id][0][0]\n",
+    "        bottom_left = corners[id][0][3]\n",
+    "        top_middle = 1 / 2 * (corners[id][0][0] + corners[id][0][1])\n",
+    "\n",
+    "        # Calculate centroid (middle) of the marker\n",
+    "        centroid = np.mean(corners[id][0], axis=0)\n",
+    "        cv2.circle(frame, tuple(map(int, centroid)), 5, (0, 255, 0), -1)\n",
+    "\n",
+    "        direction = top_middle - centroid\n",
+    "        ids_to_direction[id] = direction\n",
+    "\n",
+    "        cv2.arrowedLine(frame, tuple(map(int, centroid)),\n",
+    "                        tuple(map(int, top_middle + direction)), (0, 255, 0), thickness=2, tipLength=0.1)\n",
+    "\n",
+    "frame_markers = aruco.drawDetectedMarkers(frame.copy(), corners, ids)\n",
+    "```\n",
+    "\n",
+    "Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed. The perspective transform is computed based on four (x, y) tuples and their corresponding destination (x_dest, y_dest) tuples. In our case, the for tuples are the respective outermost corner of each of the ArUco markers delimiting the map and the destination tuples are the corner locations of our grid.\n",
+    "\n",
+    "```Python\n",
+    "sorted_marker_positions = [marker_for_corner[i] for i in range(4)]\n",
+    "new_corners = np.array(sorted_marker_positions)\n",
+    "\n",
+    "# Perspective transformation to adjust the image to have the markers in the corners\n",
+    "destination_corners = np.array([[0, 0], [w - 1, 0], [w - 1, h - 1], [0, h - 1]], dtype=np.float32)\n",
+    "\n",
+    "self.transformation_matrix = cv2.getPerspectiveTransform(np.float32(new_corners), destination_corners)\n",
+    "base_frame, corners, processed_frame = self._transform_images(base_frame, corners, frame_markers, h, processed_frame, w)\n",
+    "```\n",
+    "\n",
+    "The resulting processed image containing the framed ArUco markers is displayed below.\n",
     "\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/image_processing_images/normal_feed_img.png\" alt=\"Processed Image with Map Filling the Entire Screen\">\n",
@@ -412,9 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "```python\n",
     "#Here are some helper functions used for more convenient calls within MotionControl.py, also imported or copied into other files as needed\n",
@@ -437,9 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "<a id=\"orientation-angle-challenges\"></a> \n",
     "##### Orientation Angle Challenges\n",
@@ -924,9 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
