Adding the subsection direction calculation in MotionControl

--- a/report.ipynb
+++ b/report.ipynb
@@ -28,6 +28,7 @@
     "         -  [Path Discretization](#path-discretization)\n",
     "         -  [Integration with Vision System](#integration-vision)\n",
     "      - 3.3 [Motion Control](#motion-control)\n",
+    "         -  [Direction calculation](#direction-calculation)\n",
     "         -  [Rotate](#rotate)\n",
     "         -  [Move](#move)\n",
     "         -  [Movement Schematic](#movement-schematic)\n",
@@ -285,8 +286,23 @@
     "* **STOP**: Halts the robot to move during the process or when it reaches the goal.\n",
     "* **ROTATE**: Before moving to the next point, the Thymio aligns its direction to face towards it. Once done, the robot transits to the  MOVE state.\n",
     "* **MOVE**: Once the Thymio is aligned, it will begin moving towards the next point. This process is regulated by a PI controller to adjust the Thymio's trajectory.\n",
-    "     \n",
-    "Now we will describe the main movement of our robot, the ROTATE and MOVE states, and describe how they operate.\n",
+    "\n",
+    "Follow this, we will explain how we calculate the Thymio's direction and the desired direction. Afterwards, we will describe the main movement of our robot, the ROTATE and MOVE states, and describe how they operate.\n",
+    "\n",
+    "<a id=\"direction-calculation\"></a>    \n",
+    "##### Direction calculation\n",
+    "Before assigning a movement instruction to the Thymio, we must calculate our robot's direction and the direction to the next point in its path because our PI controller uses the error between this two directions.Therefore, we implemented a function `rotation_nextpoint` in `MotionControl.py` that receives the vectors of direction, which are detertmined in the function `get_thymio_and_path_directions` in `GlobalNavigation.py`. The function works with the function *atan2* from the library *math* to calculate the angle of one direction.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "def rotation_nextpoint(direction):\n",
+    "    \"\"\"\n",
+    "        Rotation of the Thymio before moving to\n",
+    "        the next point\n",
+    "        Return the value in degree\n",
+    "    \"\"\"\n",
+    "    return math.atan2(direction[0], direction[1]) / math.pi * 180\n",
+    "```\n",
     "  \n",
     "<a id=\"rotate\"></a>   \n",
     "##### ROTATE\n",
